--- a/alembic.ini
+++ b/alembic.ini
@@ -1,1 +1,9 @@
+from models import Base
+target_metadata = Base.metadata
+
+
+далее 
+
+alembic revision --autogenerate -m "init"
+alembic upgrade head
 
